# pacman-hooks

./: .travis.yml  README.md
.github/workflows/: check-broken-packages.yml
check-broken-packages/: Cargo.toml  check-broken-packages.hook
check-broken-packages/src/: main.rs
cinnamon-tweaks/: cinnamon-tweaks.hook  cinnamon.css.patch
pacdiff/: pacdiff.hook  pacdiff_delta  pacdiff_diffprog
reflector/: reflector.hook
sync/: boot_sync.hook  root_sync.hook
xmonad-recompile/: xmonad-recompile.hook
