[package]
name = "check-broken-packages"
version = "1.0.0"
authors = ["desbma <desbma@users.noreply.github.com>"]
edition = "2021"

[profile.release]
strip = true
lto = true
codegen-units = 1

[dependencies]
anyhow = { version = "1.0.66", default-features = false, features = ["backtrace", "std"] }
ansi_term = { version = "0.12.1", default-features = false }
glob = { version = "0.3.0", default-features = false }
indicatif = { version = "0.17.3", default-features = false, features = ["rayon"] }
log = { version = "0.4.17", default-features = false, features = ["max_level_debug", "release_max_level_info"] }
rayon = { version = "1.7.0", default-features = false }
simple_logger = { version = "4.2.0", default-features = false, features = ["colors", "stderr"] }

[dev-dependencies]
tempfile = { version = "3.8.1", default-features = false }
